# Chess

./: CMakeLists.txt  LICENSE  README.md  format_code
.github/workflows/: cmake.yml
application/: CMakeLists.txt  Chess.cpp  Chess.hpp  main.cpp
application/include/graphics/: APiece.hpp  Artist.hpp  Bishop.hpp  Board.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Resources.hpp  Rook.hpp  Score_board.hpp  Window.hpp
application/source/: Chess.cpp
application/source/graphics/: APiece.cpp  Artist.cpp  Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Queen.cpp  Resources.cpp  Rook.cpp  Score_board.cpp  Window.cpp
include/chess/: ABoard_initializer.hpp  Board.hpp  Common.hpp  Default_board_initializer.hpp  Exceptions.hpp  Game.hpp  IArtist.hpp  Move.hpp  Movement_validators.hpp  Player.hpp  Position.hpp
include/chess/pieces/: APiece.hpp  Bishop.hpp  IPeace.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece_factory.hpp  Queen.hpp  Rook.hpp
source/: Board.cpp  Default_board_initializer.cpp  Exceptions.cpp  Game.cpp  Move.cpp  Movement_validators.cpp  Player.cpp  Position.cpp
source/pieces/: APiece.cpp  APiece_movement.cpp  Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece_factory.cpp  Queen.cpp  Rook.cpp
tests/: CMakeLists.txt
tests/source/: Bishop_tests.cpp  Position_tests.cpp  Queen_tests.cpp  Rook_tests.cpp
tests/source/movement/: Diagonal_tests.cpp  Horizontal_tests.cpp  Pawn_diagonal_tests.cpp  Pawn_double_forward_tests.cpp  Pawn_forward_test.cpp  Vertical_tests.cpp
